[package]
name = "pyinrs"
version = "0.1.0"
authors = ["Aidan Hobson Sayers <aidanhs@cantab.net>"]

build = "build.rs"

[features]
wrap = []
dump = []

[dependencies.python27-sys]
version = "0.0.6"

[dependencies.libc]
version = "0.1.7"

[build-dependencies]
phf_codegen = "0.7.3"
glob = "*"
uuid = "0.1"

[dependencies]
phf = "0.7.3"
uuid = "0.1"
lazy_static = "0.1.*"

[[bin]]
name = "pyinrs"
